--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,12 +38,12 @@ dependencies:
   google_nav_bar: ^5.0.6
   flutter_vector_icons: ^2.0.0
   get: ^4.6.6
-  firebase_core: ^2.25.5
+  firebase_core: ^2.32.0
   firebase_auth: ^4.17.6
   flutter_spinkit: ^5.2.0
   dio: ^5.4.1
   url_launcher: ^6.2.5
-  cloud_firestore: ^4.15.7
+  cloud_firestore: ^4.17.5
   google_sign_in: ^6.2.1
   rflutter_alert: ^2.0.7
   hidden_drawer_menu: ^3.0.1
@@ -56,7 +56,8 @@ dependencies:
   awesome_notifications: ^0.8.2
   fl_chart: ^0.68.0
   google_fonts: ^4.0.4
-  image_picker: ^1.1.1
+  image_picker: ^1.1.2
+  firebase_storage: ^11.7.7
   
 dev_dependencies:
   flutter_test:
